--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -111,7 +111,12 @@
       </div>
     </footer>
 
-    <!-- 引入 JavaScript -->
-    <script src="../static/js/app.js"></script>
+    <!-- 引入 JavaScript 模块 -->
+    <script src="../static/js/base.js"></script>
+    <script src="../static/js/canvas.js"></script>
+    <script src="../static/js/history.js"></script>
+    <script src="../static/js/elements.js"></script>
+    <script src="../static/js/tools.js"></script>
+    <script src="../static/js/events.js"></script>
   </body>
 </html>
