refactor: :recycle: 重构为面向对象编程方式

--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -111,12 +111,12 @@
       </div>
     </footer>
 
-    <!-- 引入 JavaScript 模块 -->
-    <script src="../static/js/base.js"></script>
-    <script src="../static/js/canvas.js"></script>
-    <script src="../static/js/history.js"></script>
-    <script src="../static/js/elements.js"></script>
-    <script src="../static/js/tools.js"></script>
-    <script src="../static/js/events.js"></script>
+    <!-- 引入 JavaScript 模块（面向对象版本） -->
+    <script src="../static/js/App.js"></script>
+    <script src="../static/js/CanvasManager.js"></script>
+    <script src="../static/js/ElementManager.js"></script>
+    <script src="../static/js/EventManager.js"></script>
+    <script src="../static/js/HistoryManager.js"></script>
+    <script src="../static/js/ToolManager.js"></script>
   </body>
 </html>
